tests/expectations/compiler/function/shadow_parameter_fail.out
Error [EAST0372017]: The name `hi` is defined multiple times.
    --> compiler-test:3:13
     |
   2 |       fn tester(hi: u8) -> u8 {
     |                 ^^ previous definition of `hi` here
   3 |           let hi = 2u8;
     |               ^^ `hi` redefined here
